UP-3288: Fix "Add Tab" link so it doesn't overlap other tabs.

--- a/uportal-war/src/main/webapp/media/skins/universality/uportal3/portal.css
+++ b/uportal-war/src/main/webapp/media/skins/universality/uportal3/portal.css
@@ -553,7 +553,7 @@
 .up #portalNavigation .portal-navigation-add {
   /* Add tab link */
   top: 7px;
-  padding: 2px 8px 2px 20px;
+  padding: 4px 8px 2px 20px;
   background-color: transparent;
   background-image: url("images/add.png");
   background-position: 5px 2px;
@@ -568,6 +568,13 @@
 .up #portalNavigation .portal-navigation-add:hover, .up #portalNavigation .portal-navigation-add:focus {
   background-color: #3e4650;
   color: white;
+}
+.up #portalNavigation li.portal-navigation-add-item {
+  float: right;
+  background: transparent none;
+  border: 0;
+  margin: 1px;
+  padding-left: 5px;
 }
 .up #portalNavigation .active .portal-navigation-gripper {
   /* Gripper for indicating drag and drop ability. */
